src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
@use '../../../variables';

$block: '.#{variables.$ns}composite-bar';

#{$block} {
    $class: &;

    flex: 1 1 auto;
    width: 100%;
    min-height: 40px;
    display: flex;
    flex-direction: column;

    & &__root-menu-item[class] {
        background-color: transparent;
    }

    &_scrollable {
        flex: 1 1 auto;
        overflow-y: auto;
        scrollbar-width: none;
        -ms-overflow-style: none;

        &::-webkit-scrollbar {
            display: none;
        }
    }

    &__menu-group {
        padding: var(--g-spacing-2) 0;

        &:not(:last-child) {
            border-bottom: 1px solid var(--g-color-line-generic);
        }
    }

    &__menu-group-items {
        &_grouped {
            margin-left: var(--g-spacing-7);
            position: relative;
            border-left: 1px solid var(--g-color-line-generic);
        }
    }

    &__menu-group-item {
        height: 40px;
    }

    &__menu-group-header {
        padding: var(--g-spacing-2) var(--g-spacing-5);
    }

    &__menu-group-toggle,
    &__menu-group-toggle-placeholder {
        width: 24px;
        height: 24px;
        display: inline-flex;
        align-items: center;
        cursor: pointer;
    }

    &__menu-group-toggle {
        margin-left: auto;
    }

    &__menu-group-icon {
        margin-right: var(--g-spacing-3);
    }
}

